--- a/style.css
+++ b/style.css
@@ -139,11 +139,22 @@ h1:hover {
   color: var(--clr-primary-100);
 }
 
+@media (min-width: 1440px) {
+  h1 {
+    margin-bottom: 16px;
+  }
+}
+
 .description-text {
   line-height: 26px;
   margin-bottom: 16px;;
 }
 
+@media (min-width: 1440px) {
+  .description-text {
+    margin-bottom: 24px;
+  }
+}
 .offer {
   display: flex;
   justify-content: space-between;
@@ -153,10 +164,12 @@ h1:hover {
   margin-bottom: 16px;
 }
 
+
 @media (min-width: 1440px) {
   .offer {
     font-size: var(--fs-normal);
     line-height: 20px;
+    margin-bottom: 24px;
   }
 }
 
